# check-versions-mcp

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
.cursor/: mcp.json
.devcontainer/: devcontainer.json
src/: main.rs
src/providers/: cargo.rs  docker.rs  helm.rs  mod.rs  npm.rs  terraform.rs
src/tools/: versions.rs
