[package]
name = "check-versions-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", tag = "rmcp-v0.6.0", package = "rmcp", features = ["server", "transport-io", "macros"] }
schemars = "1"
